--- a/action.yaml
+++ b/action.yaml
@@ -14,7 +14,7 @@ inputs:
     required: true
   domain:
     description: DevHub domain (override for self hosted)
-    default: api.devhub.tools
+    default: app.devhub.tools
   devhub_api_key:
     description: Coverbot Token
     required: true
