--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^6.0.0",
     "@actions/http-client": "^2.0.1",
+    "axios": "^1.8.4",
     "decimal.js-light": "^2.5.1",
     "lcov-parse": "^1.0.0"
   },
@@ -30,9 +31,9 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.56.0",
     "eslint-plugin-github": "^5.1.7",
     "eslint-plugin-jest": "^28.11.0",
-    "eslint": "^8.56.0",
     "jest": "^29.5.0",
     "js-yaml": "^4.1.0",
     "prettier": "^3.3.2",
