update url in test files

--- a/.github/workflows/check-files.yml
+++ b/.github/workflows/check-files.yml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: ./
         with:
-          domain: private.devhub.tools
+          domain: private.devhub.cloud
           format: elixir
           file: example_coverage_files/excoveralls.json
           devhub_api_key: ${{ secrets.DEVHUB_API_KEY }}
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          domain: private.devhub.tools
+          domain: private.devhub.cloud
           format: go
           file: example_coverage_files/go.out
           devhub_api_key: ${{ secrets.DEVHUB_API_KEY }}
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          domain: private.devhub.tools
+          domain: private.devhub.cloud
           format: lcov
           file: example_coverage_files/lcov.info
           devhub_api_key: ${{ secrets.DEVHUB_API_KEY }}
@@ -55,7 +55,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          domain: private.devhub.tools
+          domain: private.devhub.cloud
           format: ruby
           file: example_coverage_files/simplecov.json
           devhub_api_key: ${{ secrets.DEVHUB_API_KEY }}
